--- a/views/user/layouts/header.ejs
+++ b/views/user/layouts/header.ejs
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Male_Fashion, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Male-Fashion | Template</title>
+    <title>Boston</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="/user/img/theme/menswear.png" />
     <!-- Google -->
@@ -28,6 +28,9 @@
     <link rel="stylesheet" href="/user/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="/user/css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
+
 
 </head>
 
