--- a/views/user/orderPlaced.ejs
+++ b/views/user/orderPlaced.ejs
@@ -59,7 +59,7 @@
                                                 </div>
                                             </td>
 
-                                            <td class="total-price">₹<%= product.totalPrice %>
+                                            <td class="total-price">₹<%= product.totalPrice.toFixed(2) %>
                                             </td>
                                         </tr>
                                         <% }) %>
