--- a/views/user/layouts/navbar.ejs
+++ b/views/user/layouts/navbar.ejs
@@ -25,7 +25,7 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="header__nav__option">
                         <a href="#" class="search-switch"><img src="/user/img/icon/search.png" alt=""></a>
-                        <a href="#"><img src="/user/img/icon/heart.png" alt=""></a>
+                        <a href="/loadWhishlist"><img src="/user/img/icon/heart.png" alt=""></a>
                         <a href="/loadCart"><img src="/user/img/icon/cart.png" alt=""> <span></span></a>
                         <!-- <div class="price">₹0.00</div> -->
                     </div>
