--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -54,10 +54,14 @@
                                   <% } else if (order.status==='returned' ) { %>
                                     <p></p>
                                     <% } else { %>
-                                      <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                                        data-bs-target="#cancelModal<%= order._id %>">
-                                        Cancel
-                                      </button>
+                                      <td class="cancel">
+                                        <button
+                                          class="btn btn-danger"
+                                          onclick="cancel('<%= order._id%>')"
+                                        >
+                                          Cancel
+                                        </button>
+                                      </td>
                                       <% } %>
                             </td>
 
@@ -76,6 +80,37 @@
         </div>
       </div>
     </section>
+    <div id="cancelReason" class="modal mt-5" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Cancel Reason</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <form onsubmit="event.preventDefault(); cancelOrder();">
+            <div class="modal-body">
+              <label for="cancelTextArea">Enter the cancel reason:</label>
+              <textarea
+                id="cancelTextArea"
+                class="form-control"
+                rows="4"
+                required
+              ></textarea>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 
     <!-- <%  { %>
         <div class="modal fade" id="cancelModal<%= %>" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -145,6 +180,61 @@
           <%  %> -->
 
 
-            <%- include('./layouts/footerNavbar.ejs') -%>
+    <%- include('./layouts/footerNavbar.ejs') -%>
 
-              <%- include('./layouts/footer.ejs') -%>
+      <%- include('./layouts/footer.ejs') -%>
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>    
+        <script>
+          let currentOrderId;
+          const cancel = (orderId) => {
+            const cancelModal = document.getElementById("cancelReason");
+            currentOrderId = orderId;
+            cancelModal.style.display = "block";
+          };
+          const cancelOrder = async () => {
+            const cancelModal = document.getElementById("cancelReason");
+            const orderId = currentOrderId;
+            let cancelValue = document.getElementById("cancelTextArea").value;
+            if (!cancelValue) {
+              Toastify({
+                text: "Cancel statement is required",
+                duration: 1000,
+                newWindow: false,
+                close: false,
+                gravity: "top",
+                position: "center",
+                stopOnFocus: false,
+                style: {
+                  background: "#384aeb",
+                },
+              }).showToast();
+              return false;
+            } else {
+              swal({
+                title: "Cancel Order",
+                text: "Are you sure you want to cancel this order?",
+                icon: "warning",
+                buttons: ["Cancel", "OK"],
+                dangerMode: true,
+              }).then(async (confirmCancel) => {
+                if (confirmCancel) {
+                  cancelModal.style.display = "none";
+                  const cancelItem = await axios.patch("/cancelOrder", {
+                    orderId,
+                    cancelReason: cancelValue,
+                  });
+                  if (cancelItem.data.message) {
+                    const statusCell = document
+                      .getElementById(`ordertable-${orderId}`)
+                      .querySelector("#status");
+                    statusCell.textContent = cancelItem.data.status;
+                    const remove = document
+                      .getElementById(`ordertable-${orderId}`)
+                      .querySelector(".cancel");
+                    remove.parentNode.removeChild(remove);
+                  }
+                }
+              });
+            }
+          };
+        </script>
